php_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpapp
      version: v1
  template:
    metadata:
      labels:
        app: phpapp
        version: v1
    spec:
      containers:
      - image: psibi/php-demo:v1.0.0
        imagePullPolicy: IfNotPresent
        name: phpapp
        ports:
        - containerPort: 9000
